--- a/Frontend/Backoffice/Adaptado/pages/calendar.html
+++ b/Frontend/Backoffice/Adaptado/pages/calendar.html
@@ -18,6 +18,15 @@
     <link rel="stylesheet" href="../dist/css/adminlte.min.css" />
     <!-- SweetAlert2 -->
     <script src="/plugins/sweetalert2/sweetalert2.min.js"></script>
+    <!-- Select2 -->
+    <link
+      rel="stylesheet"
+      href="/Frontend/Backoffice/Adaptado/plugins/select2/css/select2.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="/Frontend/Backoffice/Adaptado/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css"
+    />
   </head>
   <body class="hold-transition sidebar-mini layout-navbar-fixed">
     <!-- layout-fixed -->
@@ -1104,17 +1113,23 @@
                       />
                       <br />
                       <div class="custom-file">
-                        <input
-                          type="file"
-                          class="custom-file-input"
-                          id="customFile"
-                        />
-                        <label
-                          class="custom-file-label"
-                          style="color: rgb(147, 155, 162)"
-                          for="customFile"
-                          >Adicionar imagem</label
-                        >
+                        <div class="input-group">
+                          <div class="custom-file">
+                            <input
+                              type="file"
+                              class="custom-file-input"
+                              id="exampleInputFile"
+                            />
+                            <label
+                              class="custom-file-label"
+                              for="exampleInputFile"
+                              >Adicionar imagem</label
+                            >
+                          </div>
+                          <div class="input-group-append">
+                            <span class="input-group-text">Carregar</span>
+                          </div>
+                        </div>
                       </div>
                       <!-- /input-group -->
                     </div>
@@ -1143,10 +1158,9 @@
       <!-- /.content-wrapper -->
 
       <div class="modal fade" id="MaisInfo2">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-lg">
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title">*Nome da atividade*</h4>
               <button
                 type="button"
                 class="close"
@@ -1158,64 +1172,88 @@
             </div>
             <div class="modal-body">
               <form>
-                <div class="form-group">
-                  <label for="exampleFormControlInput1">Local</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="exampleFormControlInput1"
-                    placeholder="name@example.com"
-                  />
+                <div class="form-row">
+                  <div class="form-group col-md-8">
+                    <label for="inputEmail4">Nome da atividade</label>
+                    <input type="text" class="form-control" id="inputEmail4" />
+                  </div>
+                  <div class="form-group col-md-4">
+                    <label for="inputPassword4">Local</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="inputPassword4"
+                    />
+                  </div>
+                </div>
+                <div class="form-row">
+                  <div class="form-group col-md-6">
+                    <label for="inputEmail4">Data de inicio</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="inputEmail4"
+                      readonly
+                    />
+                  </div>
+                  <div class="form-group col-md-6">
+                    <label for="inputPassword4">Data de fim</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="inputPassword4"
+                      readonly
+                    />
+                  </div>
                 </div>
                 <div class="form-group">
-                  <label for="exampleFormControlSelect1">Example select</label>
-                  <select class="form-control" id="exampleFormControlSelect1">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                  </select>
-                </div>
-                <div class="form-group">
-                  <label for="exampleFormControlSelect2"
-                    >Example multiple select</label
-                  >
-                  <select
-                    multiple
-                    class="form-control"
-                    id="exampleFormControlSelect2"
-                  >
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                  </select>
-                </div>
-                <div class="form-group">
-                  <label for="exampleFormControlTextarea1"
-                    >Example textarea</label
-                  >
+                  <label for="exampleFormControlTextarea1">Descrição</label>
                   <textarea
                     class="form-control"
                     id="exampleFormControlTextarea1"
                     rows="3"
+                    style="resize: none"
                   ></textarea>
+                </div>
+                <div class="form-group">
+                  <label>Parceiros</label>
+                  <select
+                    class="select2bs4"
+                    multiple="multiple"
+                    style="width: 100%"
+                  >
+                    <option>Alabama</option>
+                    <option>Alaska</option>
+                    <option>California</option>
+                    <option>Delaware</option>
+                    <option>Tennessee</option>
+                    <option>Texas</option>
+                    <option>Washington</option>
+                  </select>
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputFile2">Adicionar imagem</label>
+                  <div class="input-group">
+                    <div class="custom-file">
+                      <input
+                        type="file"
+                        class="custom-file-input"
+                        id="exampleInputFile2"
+                      />
+                      <label
+                        class="custom-file-label"
+                        for="exampleInputFile2"
+                      ></label>
+                    </div>
+                    <div class="input-group-append">
+                      <span class="input-group-text">Carregar</span>
+                    </div>
+                  </div>
                 </div>
               </form>
             </div>
-            <div class="modal-footer justify-content-between">
-              <button
-                type="button"
-                class="btn btn-default"
-                data-dismiss="modal"
-              >
-                Close
-              </button>
-              <button type="button" class="btn btn-primary">
-                Save changes
-              </button>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary">Submeter</button>
             </div>
           </div>
           <!-- /.modal-content -->
@@ -1258,9 +1296,20 @@
     <script src="../plugins/fullcalendar/main.js"></script>
     <!-- AdminLTE for demo purposes -->
     <script src="../dist/js/demo.js"></script>
+    <!-- bs-custom-file-input -->
+    <script src="/Frontend/Backoffice/Adaptado/plugins/bs-custom-file-input/bs-custom-file-input.min.js"></script>
+    <!-- Select2 -->
+    <script src="/Frontend/Backoffice/Adaptado/plugins/select2/js/select2.full.min.js"></script>
     <!-- Page specific script -->
     <script>
       $(function () {
+        //Initialize Select2 Elements
+        $(".select2").select2();
+
+        //Initialize Select2 Elements
+        $(".select2bs4").select2({
+          theme: "bootstrap4",
+        });
         /* initialize the external events
      -----------------------------------------------------------------*/
         function ini_events(ele) {
@@ -1431,6 +1480,7 @@
           // Remove event from text input
           $("#new-event").val("");
         });
+        bsCustomFileInput.init();
       });
     </script>
   </body>
