--- a/Frontend/Backoffice/Adaptado/pages/tables/data.html
+++ b/Frontend/Backoffice/Adaptado/pages/tables/data.html
@@ -1017,16 +1017,17 @@
                           <td>
                             <button
                               type="button"
-                              class="btn btn-primary"
-                              data-toggle="modal"
-                              data-target="#VerMaisInfo"
+                              class="btn btn-primary ver_Mais"
                             >
                               <i class="far fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-success">
+                            <button
+                              type="button"
+                              class="btn btn-success toastsDefaultSuccess remove"
+                            >
                               <i class="fas fa-vote-yea"></i>
                             </button>
-                            <button type="button" class="btn btn-danger">
+                            <button type="button" class="btn btn-danger remove">
                               <i class="far fa-trash-alt"></i>
                             </button>
                           </td>
@@ -1041,16 +1042,19 @@
                           <td>
                             <button
                               type="button"
-                              class="btn btn-primary"
+                              class="btn btn-primary ver_Mais"
                               data-toggle="modal"
                               data-target="#VerMaisInfo"
                             >
                               <i class="far fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-success">
+                            <button
+                              type="button"
+                              class="btn btn-success toastsDefaultSuccess remove"
+                            >
                               <i class="fas fa-vote-yea"></i>
                             </button>
-                            <button type="button" class="btn btn-danger">
+                            <button type="button" class="btn btn-danger remove">
                               <i class="far fa-trash-alt"></i>
                             </button>
                           </td>
@@ -1065,16 +1069,19 @@
                           <td>
                             <button
                               type="button"
-                              class="btn btn-primary"
+                              class="btn btn-primary ver_Mais"
                               data-toggle="modal"
                               data-target="#VerMaisInfo"
                             >
                               <i class="far fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-success">
+                            <button
+                              type="button"
+                              class="btn btn-success toastsDefaultSuccess remove"
+                            >
                               <i class="fas fa-vote-yea"></i>
                             </button>
-                            <button type="button" class="btn btn-danger">
+                            <button type="button" class="btn btn-danger remove">
                               <i class="far fa-trash-alt"></i>
                             </button>
                           </td>
@@ -1089,16 +1096,19 @@
                           <td>
                             <button
                               type="button"
-                              class="btn btn-primary"
+                              class="btn btn-primary ver_Mais"
                               data-toggle="modal"
                               data-target="#VerMaisInfo"
                             >
                               <i class="far fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-success">
+                            <button
+                              type="button"
+                              class="btn btn-success toastsDefaultSuccess remove"
+                            >
                               <i class="fas fa-vote-yea"></i>
                             </button>
-                            <button type="button" class="btn btn-danger">
+                            <button type="button" class="btn btn-danger remove">
                               <i class="far fa-trash-alt"></i>
                             </button>
                           </td>
@@ -1113,16 +1123,19 @@
                           <td>
                             <button
                               type="button"
-                              class="btn btn-primary"
+                              class="btn btn-primary ver_Mais"
                               data-toggle="modal"
                               data-target="#VerMaisInfo"
                             >
                               <i class="far fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-success">
+                            <button
+                              type="button"
+                              class="btn btn-success toastsDefaultSuccess remove"
+                            >
                               <i class="fas fa-vote-yea"></i>
                             </button>
-                            <button type="button" class="btn btn-danger">
+                            <button type="button" class="btn btn-danger remove">
                               <i class="far fa-trash-alt"></i>
                             </button>
                           </td>
@@ -1137,16 +1150,19 @@
                           <td>
                             <button
                               type="button"
-                              class="btn btn-primary"
+                              class="btn btn-primary ver_Mais"
                               data-toggle="modal"
                               data-target="#VerMaisInfo"
                             >
                               <i class="far fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-success">
+                            <button
+                              type="button"
+                              class="btn btn-success toastsDefaultSuccess remove"
+                            >
                               <i class="fas fa-vote-yea"></i>
                             </button>
-                            <button type="button" class="btn btn-danger">
+                            <button type="button" class="btn btn-danger remove">
                               <i class="far fa-trash-alt"></i>
                             </button>
                           </td>
@@ -1161,16 +1177,19 @@
                           <td>
                             <button
                               type="button"
-                              class="btn btn-primary"
+                              class="btn btn-primary ver_Mais"
                               data-toggle="modal"
                               data-target="#VerMaisInfo"
                             >
                               <i class="far fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-success">
+                            <button
+                              type="button"
+                              class="btn btn-success toastsDefaultSuccess remove"
+                            >
                               <i class="fas fa-vote-yea"></i>
                             </button>
-                            <button type="button" class="btn btn-danger">
+                            <button type="button" class="btn btn-danger remove">
                               <i class="far fa-trash-alt"></i>
                             </button>
                           </td>
@@ -1185,16 +1204,19 @@
                           <td>
                             <button
                               type="button"
-                              class="btn btn-primary"
+                              class="btn btn-primary ver_Mais"
                               data-toggle="modal"
                               data-target="#VerMaisInfo"
                             >
                               <i class="far fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-success">
+                            <button
+                              type="button"
+                              class="btn btn-success toastsDefaultSuccess remove"
+                            >
                               <i class="fas fa-vote-yea"></i>
                             </button>
-                            <button type="button" class="btn btn-danger">
+                            <button type="button" class="btn btn-danger remove">
                               <i class="far fa-trash-alt"></i>
                             </button>
                           </td>
@@ -1209,16 +1231,19 @@
                           <td>
                             <button
                               type="button"
-                              class="btn btn-primary"
+                              class="btn btn-primary ver_Mais"
                               data-toggle="modal"
                               data-target="#VerMaisInfo"
                             >
                               <i class="far fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-success">
+                            <button
+                              type="button"
+                              class="btn btn-success toastsDefaultSuccess remove"
+                            >
                               <i class="fas fa-vote-yea"></i>
                             </button>
-                            <button type="button" class="btn btn-danger">
+                            <button type="button" class="btn btn-danger remove">
                               <i class="far fa-trash-alt"></i>
                             </button>
                           </td>
@@ -1249,10 +1274,9 @@
       <!-- /.content-wrapper -->
 
       <div class="modal fade" id="VerMaisInfo">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-lg">
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title">*Nome da atividade*</h4>
               <button
                 type="button"
                 class="close"
@@ -1264,64 +1288,58 @@
             </div>
             <div class="modal-body">
               <form>
+                <div class="form-row">
+                  <div class="form-group col-md-8">
+                    <label for="inputEmail4">Nome da atividade</label>
+                    <input type="text" class="form-control" id="inputEmail4" />
+                  </div>
+                  <div class="form-group col-md-4">
+                    <label for="inputPassword4">Local</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="inputPassword4"
+                    />
+                  </div>
+                </div>
+                <div class="form-row">
+                  <div class="form-group col-md-6">
+                    <label for="inputEmail4">Data de inicio</label>
+                    <input type="text" class="form-control" id="inputEmail4" />
+                  </div>
+                  <div class="form-group col-md-6">
+                    <label for="inputPassword4">Data de fim</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="inputPassword4"
+                    />
+                  </div>
+                </div>
                 <div class="form-group">
-                  <label for="exampleFormControlInput1">Local</label>
-                  <input
-                    type="text"
+                  <label for="exampleFormControlTextarea1">Descrição</label>
+                  <textarea
                     class="form-control"
-                    id="exampleFormControlInput1"
-                    placeholder="name@example.com"
-                  />
+                    id="exampleFormControlTextarea1"
+                    rows="3"
+                    style="resize: none"
+                  ></textarea>
                 </div>
                 <div class="form-group">
-                  <label for="exampleFormControlSelect1">Example select</label>
-                  <select class="form-control" id="exampleFormControlSelect1">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                  </select>
-                </div>
-                <div class="form-group">
-                  <label for="exampleFormControlSelect2"
-                    >Example multiple select</label
-                  >
+                  <label for="exampleFormControlSelect2">Parceiros</label>
                   <select
                     multiple
                     class="form-control"
                     id="exampleFormControlSelect2"
                   >
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
+                    <option></option>
+                    <option></option>
+                    <option></option>
+                    <option></option>
+                    <option></option>
                   </select>
                 </div>
-                <div class="form-group">
-                  <label for="exampleFormControlTextarea1"
-                    >Example textarea</label
-                  >
-                  <textarea
-                    class="form-control"
-                    id="exampleFormControlTextarea1"
-                    rows="3"
-                  ></textarea>
-                </div>
               </form>
-            </div>
-            <div class="modal-footer justify-content-between">
-              <button
-                type="button"
-                class="btn btn-default"
-                data-dismiss="modal"
-              >
-                Close
-              </button>
-              <button type="button" class="btn btn-primary">
-                Save changes
-              </button>
             </div>
           </div>
           <!-- /.modal-content -->
@@ -1411,6 +1429,35 @@
           info: true,
           autoWidth: false,
           responsive: true,
+        });
+        $(".toastsDefaultSuccess").click(function () {
+          $(document).Toasts("create", {
+            class: "bg-success",
+            title: "Atividade patrocinada",
+            subtitle: "Registado",
+            body:
+              "A atividade aceite foi adicionada ao seu calendário de atividades.",
+          });
+        });
+        $("#example1").on("click", ".remove", function () {
+          var table = $("#example1").DataTable();
+          var row = $(this).parents("tr");
+
+          if ($(row).hasClass("child")) {
+            table.row($(row).prev("tr")).remove().draw();
+          } else {
+            table.row($(this).parents("tr")).remove().draw();
+          }
+        });
+        //mostrar info no modal
+        $(document).ready(function () {
+          $("#example1").DataTable();
+          $("#example1 tbody").on("click", ".ver_Mais", function () {
+            $("#VerMaisInfo").modal("show");
+
+            var nome_atividade = $("td", this).eq(0).text();
+            $("#exampleFormControlInput1").text(nome_atividade);
+          });
         });
       });
     </script>
