--- a/Frontend/Backoffice/Adaptado/pages/examples/contacts.html
+++ b/Frontend/Backoffice/Adaptado/pages/examples/contacts.html
@@ -1049,10 +1049,19 @@
                             </li>
                             <br />
                             <li class="small">
-                              <span class="fa-li"
-                                ><i class="fas fa-star"></i
-                              ></span>
-                              *Avaliação?*
+                              <span class="fa-li">
+                                <i class="fas fa-medal"></i>
+                              </span>
+                              <style>
+                                .checked {
+                                  color: orange;
+                                }
+                              </style>
+                              <span class="fa fa-star checked"></span>
+                              <span class="fa fa-star checked"></span>
+                              <span class="fa fa-star checked"></span>
+                              <span class="fa fa-star"></span>
+                              <span class="fa fa-star"></span>
                             </li>
                           </ul>
                         </div>
@@ -1068,7 +1077,12 @@
                     <!-- esta div só vai aparecer para as instituições -->
                     <div class="card-footer">
                       <div class="text-right">
-                        <a href="#" class="btn btn-sm btn-primary">
+                        <a
+                          href="#"
+                          class="btn btn-sm btn-primary"
+                          data-toggle="modal"
+                          data-target="#b-verMais"
+                        >
                           <i class="fas fa-info-circle"></i> Ver mais
                         </a>
                       </div>
@@ -1118,7 +1132,12 @@
                     <!-- esta div só vai aparecer para as instituições -->
                     <div class="card-footer">
                       <div class="text-right">
-                        <a href="#" class="btn btn-sm btn-primary">
+                        <a
+                          href="#"
+                          class="btn btn-sm btn-primary"
+                          data-toggle="modal"
+                          data-target="#b-verMais"
+                        >
                           <i class="fas fa-info-circle"></i> Ver mais
                         </a>
                       </div>
@@ -1168,7 +1187,12 @@
                     <!-- esta div só vai aparecer para as instituições -->
                     <div class="card-footer">
                       <div class="text-right">
-                        <a href="#" class="btn btn-sm btn-primary">
+                        <a
+                          href="#"
+                          class="btn btn-sm btn-primary"
+                          data-toggle="modal"
+                          data-target="#b-verMais"
+                        >
                           <i class="fas fa-info-circle"></i> Ver mais
                         </a>
                       </div>
@@ -1218,7 +1242,12 @@
                     <!-- esta div só vai aparecer para as instituições -->
                     <div class="card-footer">
                       <div class="text-right">
-                        <a href="#" class="btn btn-sm btn-primary">
+                        <a
+                          href="#"
+                          class="btn btn-sm btn-primary"
+                          data-toggle="modal"
+                          data-target="#b-verMais"
+                        >
                           <i class="fas fa-info-circle"></i> Ver mais
                         </a>
                       </div>
@@ -1268,7 +1297,12 @@
                     <!-- esta div só vai aparecer para as instituições -->
                     <div class="card-footer">
                       <div class="text-right">
-                        <a href="#" class="btn btn-sm btn-primary">
+                        <a
+                          href="#"
+                          class="btn btn-sm btn-primary"
+                          data-toggle="modal"
+                          data-target="#b-verMais"
+                        >
                           <i class="fas fa-info-circle"></i> Ver mais
                         </a>
                       </div>
@@ -1318,7 +1352,12 @@
                     <!-- esta div só vai aparecer para as instituições -->
                     <div class="card-footer">
                       <div class="text-right">
-                        <a href="#" class="btn btn-sm btn-primary">
+                        <a
+                          href="#"
+                          class="btn btn-sm btn-primary"
+                          data-toggle="modal"
+                          data-target="#b-verMais"
+                        >
                           <i class="fas fa-info-circle"></i> Ver mais
                         </a>
                       </div>
@@ -1368,7 +1407,12 @@
                     <!-- esta div só vai aparecer para as instituições -->
                     <div class="card-footer">
                       <div class="text-right">
-                        <a href="#" class="btn btn-sm btn-primary">
+                        <a
+                          href="#"
+                          class="btn btn-sm btn-primary"
+                          data-toggle="modal"
+                          data-target="#b-verMais"
+                        >
                           <i class="fas fa-info-circle"></i> Ver mais
                         </a>
                       </div>
@@ -1383,6 +1427,160 @@
         <!-- /.content -->
       </div>
       <!-- /.content-wrapper -->
+
+      <div class="modal fade" id="b-verMais">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h4 class="modal-title">Nome da atividade</h4>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form>
+                <div class="form-row">
+                  <div class="form-group col-md-12">
+                    <label for="inputEmail4">Local</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="inputEmail4"
+                      readonly
+                    />
+                  </div>
+                </div>
+                <div class="form-row">
+                  <div class="form-group col-md-6">
+                    <label for="inputEmail4">Data de inicio</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="inputEmail4"
+                      readonly
+                    />
+                  </div>
+                  <div class="form-group col-md-6">
+                    <label for="inputPassword4">Data de fim</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="inputPassword4"
+                      readonly
+                    />
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="card">
+                      <div class="card-body">
+                        <div
+                          id="carouselExampleIndicators"
+                          class="carousel slide"
+                          data-ride="carousel"
+                        >
+                          <ol class="carousel-indicators">
+                            <li
+                              data-target="#carouselExampleIndicators"
+                              data-slide-to="0"
+                              class="active"
+                            ></li>
+                            <li
+                              data-target="#carouselExampleIndicators"
+                              data-slide-to="1"
+                            ></li>
+                            <li
+                              data-target="#carouselExampleIndicators"
+                              data-slide-to="2"
+                            ></li>
+                          </ol>
+                          <div class="carousel-inner">
+                            <div class="carousel-item active">
+                              <img
+                                class="d-block w-100"
+                                src="/Frontend/Backoffice/Adaptado/dist/img/avatar3.png"
+                                alt="First slide"
+                              />
+                            </div>
+                            <div class="carousel-item">
+                              <img
+                                class="d-block w-100"
+                                src="/Frontend/Backoffice/Adaptado/dist/img/avatar2.png"
+                                alt="Second slide"
+                              />
+                            </div>
+                            <div class="carousel-item">
+                              <img
+                                class="d-block w-100"
+                                src="/Frontend/Backoffice/Adaptado/dist/img/avatar5.png"
+                                alt="Third slide"
+                              />
+                            </div>
+                          </div>
+                          <a
+                            class="carousel-control-prev"
+                            href="#carouselExampleIndicators"
+                            role="button"
+                            data-slide="prev"
+                          >
+                            <span
+                              class="carousel-control-custom-icon"
+                              aria-hidden="true"
+                            >
+                              <i class="fas fa-chevron-left"></i>
+                            </span>
+                            <span class="sr-only">Previous</span>
+                          </a>
+                          <a
+                            class="carousel-control-next"
+                            href="#carouselExampleIndicators"
+                            role="button"
+                            data-slide="next"
+                          >
+                            <span
+                              class="carousel-control-custom-icon"
+                              aria-hidden="true"
+                            >
+                              <i class="fas fa-chevron-right"></i>
+                            </span>
+                            <span class="sr-only">Next</span>
+                          </a>
+                        </div>
+                      </div>
+                      <!-- /.card-body -->
+                    </div>
+                    <!-- /.card -->
+                  </div>
+                  <!-- /.col -->
+                  <div class="col-md-6">
+                    <div class="card">
+                      <div class="card-body"></div>
+                      <!-- /.card-body -->
+                    </div>
+                    <!-- /.card -->
+                  </div>
+                  <!-- /.col -->
+                </div>
+                <!-- /.row -->
+                <!-- END ACCORDION & CAROUSEL-->
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary">
+                Adicionar material
+              </button>
+            </div>
+          </div>
+          <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+      </div>
+      <!-- /.modal -->
 
       <footer class="main-footer">
         <div class="float-right d-none d-sm-block"><b>Version</b> 3.1.0-rc</div>
