--- a/Frontend/Backoffice/Adaptado/pages/tables/parceiros.html
+++ b/Frontend/Backoffice/Adaptado/pages/tables/parceiros.html
@@ -1002,7 +1002,7 @@
                         <tr>
                           <th>Nome</th>
                           <th>Atividade</th>
-                          <th>Descrição</th>
+                          <th>Proposta</th>
                           <th></th>
                         </tr>
                       </thead>
@@ -1023,10 +1023,13 @@
                             >
                               <i class="far fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-success">
+                            <button
+                              type="button"
+                              class="btn btn-success toastsDefaultSuccess remove"
+                            >
                               <i class="fas fa-vote-yea"></i>
                             </button>
-                            <button type="button" class="btn btn-danger">
+                            <button type="button" class="btn btn-danger remove">
                               <i class="far fa-trash-alt"></i>
                             </button>
                           </td>
@@ -1047,10 +1050,13 @@
                             >
                               <i class="far fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-success">
+                            <button
+                              type="button"
+                              class="btn btn-success toastsDefaultSuccess remove"
+                            >
                               <i class="fas fa-vote-yea"></i>
                             </button>
-                            <button type="button" class="btn btn-danger">
+                            <button type="button" class="btn btn-danger remove">
                               <i class="far fa-trash-alt"></i>
                             </button>
                           </td>
@@ -1071,10 +1077,13 @@
                             >
                               <i class="far fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-success">
+                            <button
+                              type="button"
+                              class="btn btn-success toastsDefaultSuccess remove"
+                            >
                               <i class="fas fa-vote-yea"></i>
                             </button>
-                            <button type="button" class="btn btn-danger">
+                            <button type="button" class="btn btn-danger remove">
                               <i class="far fa-trash-alt"></i>
                             </button>
                           </td>
@@ -1095,10 +1104,13 @@
                             >
                               <i class="far fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-success">
+                            <button
+                              type="button"
+                              class="btn btn-success toastsDefaultSuccess remove"
+                            >
                               <i class="fas fa-vote-yea"></i>
                             </button>
-                            <button type="button" class="btn btn-danger">
+                            <button type="button" class="btn btn-danger remove">
                               <i class="far fa-trash-alt"></i>
                             </button>
                           </td>
@@ -1119,10 +1131,13 @@
                             >
                               <i class="far fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-success">
+                            <button
+                              type="button"
+                              class="btn btn-success toastsDefaultSuccess remove"
+                            >
                               <i class="fas fa-vote-yea"></i>
                             </button>
-                            <button type="button" class="btn btn-danger">
+                            <button type="button" class="btn btn-danger remove">
                               <i class="far fa-trash-alt"></i>
                             </button>
                           </td>
@@ -1143,10 +1158,13 @@
                             >
                               <i class="far fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-success">
+                            <button
+                              type="button"
+                              class="btn btn-success toastsDefaultSuccess remove"
+                            >
                               <i class="fas fa-vote-yea"></i>
                             </button>
-                            <button type="button" class="btn btn-danger">
+                            <button type="button" class="btn btn-danger remove">
                               <i class="far fa-trash-alt"></i>
                             </button>
                           </td>
@@ -1167,10 +1185,13 @@
                             >
                               <i class="far fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-success">
+                            <button
+                              type="button"
+                              class="btn btn-success toastsDefaultSuccess remove"
+                            >
                               <i class="fas fa-vote-yea"></i>
                             </button>
-                            <button type="button" class="btn btn-danger">
+                            <button type="button" class="btn btn-danger remove">
                               <i class="far fa-trash-alt"></i>
                             </button>
                           </td>
@@ -1191,10 +1212,13 @@
                             >
                               <i class="far fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-success">
+                            <button
+                              type="button"
+                              class="btn btn-success toastsDefaultSuccess remove"
+                            >
                               <i class="fas fa-vote-yea"></i>
                             </button>
-                            <button type="button" class="btn btn-danger">
+                            <button type="button" class="btn btn-danger remove">
                               <i class="far fa-trash-alt"></i>
                             </button>
                           </td>
@@ -1215,10 +1239,13 @@
                             >
                               <i class="far fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-success">
+                            <button
+                              type="button"
+                              class="btn btn-success toastsDefaultSuccess remove"
+                            >
                               <i class="fas fa-vote-yea"></i>
                             </button>
-                            <button type="button" class="btn btn-danger">
+                            <button type="button" class="btn btn-danger remove">
                               <i class="far fa-trash-alt"></i>
                             </button>
                           </td>
@@ -1227,8 +1254,8 @@
                       <tfoot>
                         <tr>
                           <th>Nome atividade</th>
-                          <th>Data inicio/fim</th>
-                          <th>Descrição</th>
+                          <th>Atividade</th>
+                          <th>Proposta</th>
                           <th></th>
                         </tr>
                       </tfoot>
@@ -1249,10 +1276,9 @@
       <!-- /.content-wrapper -->
 
       <div class="modal fade" id="VerMaisInfo">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-lg">
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title">*Nome da atividade*</h4>
               <button
                 type="button"
                 class="close"
@@ -1264,64 +1290,58 @@
             </div>
             <div class="modal-body">
               <form>
-                <div class="form-group">
-                  <label for="exampleFormControlInput1">Local</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="exampleFormControlInput1"
-                    placeholder="name@example.com"
-                  />
+                <div class="form-row">
+                  <div class="form-group col-md-6">
+                    <label for="inputCity">Nome</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="inputCity"
+                      readonly
+                    />
+                  </div>
+                  <div class="form-group col-md-4">
+                    <label for="inputState">Email</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="inputState"
+                      readonly
+                    />
+                  </div>
+                  <div class="form-group col-md-2">
+                    <label for="inputZip">Tlm.</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="inputZip"
+                      readonly
+                    />
+                  </div>
                 </div>
-                <div class="form-group">
-                  <label for="exampleFormControlSelect1">Example select</label>
-                  <select class="form-control" id="exampleFormControlSelect1">
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                  </select>
+                <div class="form-row">
+                  <div class="form-group col-md-8">
+                    <label for="inputEmail4">Atividade</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="inputEmail4"
+                      readonly
+                    />
+                  </div>
                 </div>
+
                 <div class="form-group">
-                  <label for="exampleFormControlSelect2"
-                    >Example multiple select</label
-                  >
-                  <select
-                    multiple
-                    class="form-control"
-                    id="exampleFormControlSelect2"
-                  >
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                    <option>4</option>
-                    <option>5</option>
-                  </select>
-                </div>
-                <div class="form-group">
-                  <label for="exampleFormControlTextarea1"
-                    >Example textarea</label
-                  >
+                  <label for="exampleFormControlTextarea1">Proposta</label>
                   <textarea
                     class="form-control"
                     id="exampleFormControlTextarea1"
                     rows="3"
+                    style="resize: none"
+                    readonly
                   ></textarea>
                 </div>
               </form>
-            </div>
-            <div class="modal-footer justify-content-between">
-              <button
-                type="button"
-                class="btn btn-default"
-                data-dismiss="modal"
-              >
-                Close
-              </button>
-              <button type="button" class="btn btn-primary">
-                Save changes
-              </button>
             </div>
           </div>
           <!-- /.modal-content -->
@@ -1411,6 +1431,24 @@
           info: true,
           autoWidth: false,
           responsive: true,
+        });
+        $(".toastsDefaultSuccess").click(function () {
+          $(document).Toasts("create", {
+            class: "bg-success",
+            title: "Patrocinio aceite",
+            subtitle: "Registado",
+            body: "A parceria aceite foi adicionada à atividade em questão.",
+          });
+        });
+        $("#example1").on("click", ".remove", function () {
+          var table = $("#example1").DataTable();
+          var row = $(this).parents("tr");
+
+          if ($(row).hasClass("child")) {
+            table.row($(row).prev("tr")).remove().draw();
+          } else {
+            table.row($(this).parents("tr")).remove().draw();
+          }
         });
       });
     </script>
